css/app.css
@font-face {
  font-family: 'OpenSansCondLight';
  src: url('fonts/OpenSans-CondLight-webfont.eot');
  src: url('fonts/OpenSans-CondLight-webfont.eot?#iefix') format('embedded-opentype'),
       url('fonts/OpenSans-CondLight-webfont.woff') format('woff'),
       url('fonts/OpenSans-CondLight-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;

}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center, button,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	vertical-align: baseline;
	background: transparent;
}

body {
  width: 100%;
  //background-color: lightskyblue; //rgb(113,49,99); //rgb(3,77,114); //#9e99c4; //#e74c3c; //#34495e; //#222;
  background: #c9dbe9;
  /*background: -webkit-linear-gradient(top, #c9dbe9 0%, #fff 100%);
  background: -linear-gradient(top, #c9dbe9 0%, #fff 100%);
  background: -moz-linear-gradient(top, #c9dbe9 0%, #fff 100%);*/
  font-family: 'OpenSansCondLight', "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
  font-size: 22px;
  color: #fff;
  overflow-x: hidden;
}

header {
  width: 100%;
  background: rgba(0,0,0,.6);
  height: 40px;
  padding: 3px;
  position: fixed;
  top: 0;
  z-index: 10000;
}

.container {
  width: 1024px;
  position: relative;
  margin: auto;
}

.intro {
  letter-spacing: 1px;
  line-height: 36px;
  display: inline-block;
}

.wrapper {
  position: relative;
  top: -160px;
}

.floatRight {
  float: right;
  margin-right: 5px;
}

.stickRight {
  position: absolute;
  top:0; right: 0;
}

.name {
  color: lightskyblue;
}

.photu {
  width: 40px;
  height: 40px;
  position: relative;
  vertical-align: middle;
  cursor: pointer;
  -webkit-transition: all .3s linear;
  -moz-transition: all .3s linear;
  -ms-transition: all .3s linear;
  -o-transition: all .3s linear;
  transition: all .3s linear;
}

.photu:hover {
  top: 20px;
  -webkit-transform: scale(2);
  -moz-transform: scale(2);
  -ms-transform: scale(2);
  -o-transform: scale(2);
  transform: scale(2);
}

@-webkit-keyframes rotateY {
  from{
    -webkit-transform: rotateY(0deg);
  }
  to{
    -webkit-transform: rotateY(360deg);
  }
}

@-moz-keyframes rotateY {
  from{
    -moz-transform: rotateY(0deg);
  }
  to{
    -moz-transform: rotateY(360deg);
  }
}

@-ms-keyframes rotateY {
  from{
    -ms-transform: rotateY(0deg);
  }
  to{
    -ms-transform: rotateY(360deg);
  }
}

@-o-keyframes rotateY {
  from{
    -o-transform: rotateY(0deg);
  }
  to{
    -o-transform: rotateY(360deg);
  }
}

@keyframes rotateY {
  from{
    transform: rotateY(0deg);
  }
  to{
    transform: rotateY(360deg);
  }
}


.rotateY {
  display: inline-block;
  animation: rotateY 3s linear infinite;
  -webkit-animation: rotateY 3s linear infinite;
  -moz-animation: rotateY 3s linear infinite;
  -ms-animation: rotateY 3s linear infinite;
  -o-animation: rotateY 3s linear infinite;
}

.sectionTitle {
  width: 100%;
  display: inline-block;
  margin-top: 15px;
  padding: 5px;
  font-size: 26px;
  letter-spacing: 1px;
  color: #000;
}

.iframeWrap {
  position: relative;
  width: 334px;
  height: 200px;
  margin: 0 7px 7px 0;
  float: left;
  position: relative;
  background: #9e99c4;
  overflow: hidden;
  opacity: .65;
}

.coverLink {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  border: 0 !important;
  z-index: 4000;
}

.iframeWrap iframe {
  width: 300%;
  height: 300%;
  border: 0;
  position: absolute;
  top: 0;
  left: 0;
  background: #9e99c4;
  -webkit-transform: scale(0.34);
  -ms-transform: scale(0.34);
  -o-transform: scale(0.34);
  transform: scale(0.34);

  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  -o-transform-origin: top left;
  transform-origin: top left;
}

.frameTitle {
  position: absolute;
  width: 100%;
  bottom: 0;
  background: rgba(0,0,0,.8);
  padding: 5px;
  text-align: center;
  color: lightskyblue;
  text-transform: capitalize;
}

#clouds{
  position: relative;
  top: 130px;
}

.cloud {
  width: 200px; height: 60px;
  background: #fff;
  border-radius: 200px;
  position: relative; 
}

.cloud:before, .cloud:after {
  content: '';
  position: absolute; 
  background: #fff;
  width: 100px; height: 80px;
  position: absolute; top: -15px; left: 10px;
  border-radius: 100px;
  transform: rotate(30deg);
  -webkit-transform: rotate(30deg);
  -moz-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  -o-transform: rotate(30deg);
}

.cloud:after {
  width: 120px; height: 120px;
  top: -55px; left: auto; right: 15px;
}

/*Time to animate*/
.cloud1 {
  left: 380px;
  -webkit-animation: moveclouds 7s linear infinite;
  -moz-animation: moveclouds 7s linear infinite;
  -ms-animation: moveclouds 7s linear infinite;
  -o-animation: moveclouds 7s linear infinite;
  animation: moveclouds 7s linear infinite;
}

.cloud2 {
  left: 380px; top: -100px;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  transform: scale(0.8);
  opacity: 0.8;
  -webkit-animation: moveclouds 9s linear infinite;
  -moz-animation: moveclouds 9s linear infinite;
  -ms-animation: moveclouds 9s linear infinite;
  -o-animation: moveclouds 9s linear infinite;
  animation: moveclouds 9s linear infinite;
}

.cloud3 {
  left: 380px;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  -o-transform: scale(0.8);
  transform: scale(0.8);
  opacity: 0.8;
  -webkit-animation: moveclouds 10s linear infinite;
  -moz-animation: moveclouds 10s linear infinite;
  -ms-animation: moveclouds 10s linear infinite;
  -o-animation: moveclouds 10s linear infinite;
  animation: moveclouds 10s linear infinite;
}

.cloud4 {
  left: 380px; top: -250px;
  -webkit-transform: scale(0.75);
  -moz-transform: scale(0.75);
  -ms-transform: scale(0.75);
  -o-transform: scale(0.75);
  transform: scale(0.75);
  opacity: 0.75;
  -webkit-animation: moveclouds 12s linear infinite;
  -moz-animation: moveclouds 12s linear infinite;
  -ms-animation: moveclouds 12s linear infinite;
  -o-animation: moveclouds 12s linear infinite;
  animation: moveclouds 12s linear infinite;
}

.cloud5 {
  left: 380px; top: -340px;
  -webkit-transform: scale(0.6);
  -moz-transform: scale(0.6);
  -ms-transform: scale(0.6);
  -o-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 0.6;
  -webkit-animation: moveclouds 14s linear infinite;
  -moz-animation: moveclouds 14s linear infinite;
  -ms-animation: moveclouds 14s linear infinite;
  -o-animation: moveclouds 14s linear infinite;
  animation: moveclouds 14s linear infinite;
}

.cloud6 {
  left: 380px; top: -300px;
  -webkit-transform: scale(0.5);
  -moz-transform: scale(0.5);
  transform: scale(0.5);
  opacity: 0.5;
  -webkit-animation: moveclouds 16s linear infinite;
  -moz-animation: moveclouds 16s linear infinite;
  -ms-animation: moveclouds 16s linear infinite;
  -o-animation: moveclouds 16s linear infinite;
  animation: moveclouds 16s linear infinite;
}

@-webkit-keyframes moveclouds {
  0% {margin-left: 1000px;}
  100% {margin-left: -1000px;}
}
@-moz-keyframes moveclouds {
  0% {margin-left: 1000px;}
  100% {margin-left: -1000px;}
}
@-ms-keyframes moveclouds {
  0% {margin-left: 1000px;}
  100% {margin-left: -1000px;}
}
@-o-keyframes moveclouds {
  0% {margin-left: 1000px;}
  100% {margin-left: -1000px;}
}
@keyframes moveclouds {
  0% {margin-left: 1000px;}
  100% {margin-left: -1000px;}
}

#ground {
  width: 110%;
  margin-top: 300px;
  position: relative;
  left: -50px;
  bottom: 0;
  height: 160px;
  padding: 45px 0 10px 0;
  border-radius: 50% 50% 0 0;
  background: #19386f;
  box-shadow: 0px -50px 50px #fff;
  text-align: center;
}

